--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
     />
     <title>Homepage</title>
   </head>
-  <body></body>
+  <body>
+    <section class="main">
+      <div class="center"></div>
+    </section>
+  </body>
 </html>
