--- a/index.html
+++ b/index.html
@@ -21,7 +21,30 @@
   </head>
   <body>
     <section class="main">
-      <div class="center"></div>
+      <div class="center">
+        <div class="menu">
+          <div class="logo-menu">
+            <a href="/"><img src="/images/logoagencia.svg" /></a>
+          </div>
+          <div class="itens-menu">
+            <a href="#">Início</a>
+            <a href="#">Por que nós?</a>
+            <a href="#">Depoimentos</a>
+            <a class="contato" href="">Entre em contato</a>
+          </div>
+        </div>
+        <!--menu -->
+        <div class="mockup">
+          <h1>Promova experiências aos seus clientes</h1>
+          <br />
+          <p>E veja resultados expressivos dia após dia</p>
+          <br />
+          <img src="images/mockup.svg" />
+        </div>
+        <!--mockup -->
+      </div>
+      <!--center -->
     </section>
+    <!--main -->
   </body>
 </html>
